Add Legislator#index basic func

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+  	<h1>Congress-Water</h1>
+
+	<%= render "legislators/partials/toolbar" %>
     <%= yield %>
   </body>
 </html>
