--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,7 @@
   </head>
 
   <body>
-  	<h1>Congress-Water</h1>
-
-	<%= render "legislators/partials/toolbar-react" %>
+  	<h1>Congress-Watcher</h1>
     <%= yield %>
   </body>
 </html>
