Add RoleShow and fix segue problems like from RoleShow back to SenatorIndex and from groupNew to SenatorIndex

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,12 @@
  *= require font-awesome
  
  */
+.article-thumbnail {
+    overflow:hidden;
+    width: 100%;
+    height: 150px;
+}
+ 
 .sort-by {
 	margin-bottom:10px;
 }
