Add billShow page

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component 'App', {} %>
+<%= react_component('App', {action: "dashboard", bodyContent: nil, breadCrumbs: ["dashboard"]}, {prerender: false}) %>
