--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,10 @@
     width: 100%;
     height: 150px;
 }
+
+.bold {
+	font-weight: bold;
+}
  
 .sort-by {
 	margin-bottom:10px;
@@ -39,9 +43,19 @@
 {
     border-right:5px solid #EE3523;margin-bottom:10px
 }
-.info-block-Independent
+.info-block-I
 {
     border-right:5px solid #DDDDDD;margin-bottom:10px
+}
+.list-header {
+	font-size: 1.25em;
+	margin-bottom: 0px;
+}
+.list-sub-header {
+	font-size: 1em;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	font-weight: normal;
 }
 .role-item {
 	border-bottom:1px solid #DDDDDD;
