Add filter functionality to roleIndex

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,15 +35,15 @@
 	margin-bottom:10px;
 }
 
-.info-block-D
+.info-block-Democrate
 {
     border-right:5px solid #0055a5;margin-bottom:10px
 }
-.info-block-R
+.info-block-Republican
 {
     border-right:5px solid #EE3523;margin-bottom:10px
 }
-.info-block-I
+.info-block-Independent
 {
     border-right:5px solid #DDDDDD;margin-bottom:10px
 }
