Add articles for dashboard and roleShow

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component('App', {action: "dashboard", bodyContent: nil, breadCrumbs: ["dashboard"]}, {prerender: false}) %>
+<%= react_component('App', {action: "dashboard", bodyContent: @articles, breadCrumbs: ["dashboard"]}) %>
